# serviced

./: .gitignore  Cargo.toml  README.md  build.toml
ipc-serviced/: Cargo.toml
ipc-serviced/src/: lib.rs  types.rs
src/: config.rs  main.rs  service.rs  sort.rs  types.rs  util.rs
