[package]
name = "serviced"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
linux-ipc = "0.2.1"

nix = { version = "0.29.0", default-features = false, features = ["signal"] }

signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"

tl = { path = "../tl" }
logger = { path = "../logger" }
