[package]
name = "serviced"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
ipc = { workspace = true }

rustix = { workspace = true, features = ["process"] }

tokio = { workspace = true }
futures = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

tl = { workspace = true }
logger = { workspace = true }
