[package]
name = "serviced"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde-inline-default = { workspace = true }

rustix = { workspace = true, features = ["process"] }

tokio = { workspace = true }
futures = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

logger = { workspace = true }
ipc = { workspace = true }
tl = { workspace = true }
